[gd_scene load_steps=38 format=2]

[ext_resource path="res://black_dark/flying_2.png" type="Texture" id=1]
[ext_resource path="res://black_dark/flying_4.png" type="Texture" id=2]
[ext_resource path="res://black_dark/flying_5.png" type="Texture" id=3]
[ext_resource path="res://black_dark/flying_1.png" type="Texture" id=4]
[ext_resource path="res://black_dark/flying_7.png" type="Texture" id=5]
[ext_resource path="res://black_dark/flying_8.png" type="Texture" id=6]
[ext_resource path="res://black_dark/flying_3.png" type="Texture" id=7]
[ext_resource path="res://black_dark/flying_6.png" type="Texture" id=8]
[ext_resource path="res://black_dark/attack_6.png" type="Texture" id=9]
[ext_resource path="res://black_dark/attack_1.png" type="Texture" id=10]
[ext_resource path="res://black_dark/attack_3.png" type="Texture" id=11]
[ext_resource path="res://black_dark/attack_2.png" type="Texture" id=12]
[ext_resource path="res://black_dark/attack_5.png" type="Texture" id=13]
[ext_resource path="res://black_dark/attack_4.png" type="Texture" id=14]
[ext_resource path="res://black_dark/attack_7.png" type="Texture" id=15]
[ext_resource path="res://Death.gd" type="Script" id=16]
[ext_resource path="res://PNG PERSONAGEM PRINCIPAL/SnapSave.io - Thrall Claw Attack Sound Effect Third Variation (128 kbps).mp3" type="AudioStream" id=17]
[ext_resource path="res://black_dark/hit_1.png" type="Texture" id=18]
[ext_resource path="res://black_dark/hit_2.png" type="Texture" id=19]
[ext_resource path="res://black_dark/attack_teleport_1.png" type="Texture" id=20]
[ext_resource path="res://black_dark/attack_teleport_2.png" type="Texture" id=21]
[ext_resource path="res://black_dark/hit_3.png" type="Texture" id=22]
[ext_resource path="res://black_dark/hit_4.png" type="Texture" id=23]
[ext_resource path="res://black_dark/attack_teleport_7.png" type="Texture" id=24]
[ext_resource path="res://black_dark/attack_teleport_10.png" type="Texture" id=25]
[ext_resource path="res://black_dark/attack_teleport_3.png" type="Texture" id=26]
[ext_resource path="res://black_dark/attack_teleport_4.png" type="Texture" id=27]
[ext_resource path="res://black_dark/attack_teleport_6.png" type="Texture" id=28]
[ext_resource path="res://black_dark/attack_teleport_8.png" type="Texture" id=29]
[ext_resource path="res://black_dark/attack_teleport_5.png" type="Texture" id=30]
[ext_resource path="res://black_dark/attack_teleport_9.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 15 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 25 ) ],
"loop": true,
"name": "attack_teleport",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walk"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 110.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 16 )

[node name="Death" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -352, -528 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "attack_teleport"
centered = false
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/attack = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, -129.5 )
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -96, -88 )
shape = SubResource( 3 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 0, 0.298039, 1, 1 )
self_modulate = Color( 0, 0.227451, 1, 1 )
position = Vector2( -96, -88 )
shape = SubResource( 4 )

[node name="hitFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -22.939

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="AttackDetector" to="." method="_on_AttackDetector_body_exited"]
